<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BreakFit</string>
<!-- Entertainment menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_cardio">Cardio</string>
    <string name="menu_weightlifting">Weightlifting</string>
    <string name="menu_chest">Chest</string>
    <string name="menu_back">Back</string>
    <string name="menu_biceps">Biceps</string>
    <string name="menu_mytours">Favorits</string>
    	<!-- components -->
    <string name="textview_break">BREAK</string>
    <string name="textview_breaktimer">Time left: </string>
    <string name="textview_set">Set:</string>
    <string name="textview_set_length">Set Length:</string>
    <string name="btn_start">START</string>
<!-- Dunno -->
    <string name="btn_createfile">Create file</string>
    <string name="btn_readfile">Read file</string>
<!-- Entertainment Detail -->
    <string name="textview_exercise_name">Exercise name</string>
    <string name="menu_add">Add to Favorits</string>
    <string name="menu_delete">Remove from Favorits</string>
    <string name="textview_description">Description</string>
<!-- Profile Main menu -->
    <string name="profile_add">Add Profile</string>
    <string name="profile_delete">Delete Profile</string>
    <string name="profile_menu">Menu</string>
<!-- Profile edit menu -->
    <string name="textview_exercise_name_profile_edit">Exercise name</string>
    <string name="textview_sets_profile_edit">Amount of sets</string>
    <string name="textview_set_time">Set time</string>

    
    
    
    
    <string name="profile_add_exercise">Add Exercise</string>

</resources>